--- a/data/Zeros/Zeros_of_the_Riemann_zeta_function/collection.yaml
+++ b/data/Zeros/Zeros_of_the_Riemann_zeta_function/collection.yaml
@@ -1,40 +1,50 @@
-ID: {{include|id.yaml}} 
+ID: INPUT{id.yaml}
 
-Title: Zeros of the Riemann zeta function 
+Title: >
+  Zeros of the Riemann zeta function 
 
 Definition: >
-  The list contains the imaginary parts of the zeros of the 
-  Riemann zeta function that lie in the upper half plane, 
-  ordered increasingly.
+  The list contains the imaginary parts of the non-trivial zeros of the 
+  Riemann zeta function, ordered increasingly.
+
+Parameters:
+  n:
+    type: Z
+    constraint: $n \neq 0$
+    comments: >
+      The positive imaginary parts are labelled $n = 1, 2, 3, \ldots$, 
+      the negative ones are labelled $n = -1, -2, -3, \ldots$,
+      and the index $n = 0$ is skipped.
    
 Comments:
 - > 
-  The Riemann zeta function $\zeta(s)$ is the meromorphic continuation 
-  of the Dirichlet series $s \to \sum_{n=0}^\infty n^{-s}, \Re(s) > 0$.
+  The Riemann zeta function $\zeta(s)$
+  is the meromorphic continuation of the Dirichlet series 
+  $s \to \sum_{n=0}^\infty n^{-s}, \Re(s) > 1$.
   
 - >
-  Its so-called trivial zeros are the negative even integers, which are
-  therefore not listed.
+  Its so-called trivial zeros are the negative even integers, 
+  which are therefore not listed.
 
   All known non-trivial zeros lie on the line $\Re s = 1/2$.
   Their imaginary parts are symmetric about 0; 
   whereby it is enough to know the positive ones.
-
-Formulas: >  
+  
+Formulas: 
 
 Programs: 
 
 References:
-- Pl15: 
+  Pl15: 
     bib: David J. Platt, Math. Comp. 84 (2015), 1521-1535.
     doi: 10.1090/S0025-5718-2014-02884-6 
     mr: 3315519
 
 Links:
-- Wiki:
+  Wiki:
     title: "Wikipedia: Riemann zeta function"
     url: https://en.wikipedia.org/wiki/Riemann_zeta_function
-- LMFDB:
+  LMFDB:
     title: "LMFDB: Zeta zeros"
     url: https://www.lmfdb.org/zeros/zeta/
 
@@ -43,18 +53,16 @@ Similar tables:
 Keywords: |
   
 Tags: |
-
-Parameters:
-- n:
-    type: Z_{>=1}
+  zero
+  L-function
 
 Data properties:
-- type: RR
-- complete: no
-- absolute precision: 2.5e-31
-- sources:
-  - [Pl15]
-  - [LMFDB]
+  type: R
+  complete: no
+  absolute precision: 2.5e-31
+  both signs: True
+  sources:
+  - CITE{Pl15}
+  - CITE{LMFDB}
 
-Numbers:
-{{include|numbers.yaml}}
+Numbers: INPUT{numbers.yaml}
