added diagonal Ramsey numbers

--- a/data/Computational_complexity/Matrix_multiplication_complexity/collection.yaml
+++ b/data/Computational_complexity/Matrix_multiplication_complexity/collection.yaml
@@ -32,7 +32,7 @@ References:
       Josh Alman and Virginia Vassilevska Williams,
       "A Refined Laser Method and Faster Matrix Multiplication", 
       32nd Annual ACM-SIAM Symposium on Discrete Algorithms (SODA 2021)
-    arxiv: 2010.05846 [cs.DS] 
+    arXiv: 2010.05846 [cs.DS] 
   St:
     bib: >
       Volker Strassen, "Gaussian elimination is not optimal", 
