--- a/data/Basic_constants/Integers/collection.yaml
+++ b/data/Basic_constants/Integers/collection.yaml
@@ -32,11 +32,11 @@ Links:
 
 Similar tables:
   
-Keywords: |
-  
-Tags: |
-  ring
-  Abelian group  
+Keywords:
+ 
+Tags:
+- ring
+- Abelian group  
 
 Data properties:
   type: Z
