--- a/data/Basic_constants/Pi/collection.yaml
+++ b/data/Basic_constants/Pi/collection.yaml
@@ -27,12 +27,12 @@ Links:
 
 Similar tables:
   
-Keywords: |
+Keywords:
   
-Tags: |
-  trigonometry
-  transcendental
-  irrational
+Tags:
+- trigonometry
+- transcendental
+- irrational
   
 
 Data properties:
