--- a/data/Zeros/Zeros_of_the_Riemann_zeta_function/collection.yaml
+++ b/data/Zeros/Zeros_of_the_Riemann_zeta_function/collection.yaml
@@ -10,7 +10,7 @@ Definition: >
 Parameters:
   n:
     type: Z
-    constraint: $n \neq 0$
+    constraints: $n \neq 0$
     comments: >
       The positive imaginary parts are labelled $n = 1, 2, 3, \ldots$, 
       the negative ones are labelled $n = -1, -2, -3, \ldots$,
@@ -20,13 +20,13 @@ Comments:
 - > 
   The Riemann zeta function $\zeta(s)$
   is the meromorphic continuation of the Dirichlet series 
-  $s \to \sum_{n=0}^\infty n^{-s}, \Re(s) > 1$.
+  $\sum_{n=0}^\infty n^{-s}, \Re(s) > 1$.
   
 - >
   Its so-called trivial zeros are the negative even integers, 
   which are therefore not listed.
 
-  All known non-trivial zeros lie on the line $\Re s = 1/2$.
+  All known non-trivial zeros lie on the line $\Re(s) = 1/2$.
   Their imaginary parts are symmetric about 0; 
   whereby it is enough to know the positive ones.
   
@@ -50,11 +50,13 @@ Links:
 
 Similar tables:
   
-Keywords: |
+Keywords:
+- RH
+- GRH
   
-Tags: |
-  zero
-  L-function
+Tags:
+- zero
+- L-function
 
 Data properties:
   type: R
