--- a/data/Zeros/Zeros_of_Dirichlet_L_functions/collection.yaml
+++ b/data/Zeros/Zeros_of_Dirichlet_L_functions/collection.yaml
@@ -28,26 +28,26 @@ Parameters:
       and the index $k = 0$ is skipped.
   
 Comments:
-- > 
-  Let $\chi$ be a Dirichlet character.
-  The associated L-function $\zeta(\chi,s)$ is the 
-  meromorphic continuation of the Dirichlet series 
-  $\sum_{n=0}^\infty \chi(n) n^{-s}, \Re(s) > 0$.
+  comment-Dirichlet-series-definition: > 
+    Let $\chi$ be a Dirichlet character.
+    The associated L-function $\zeta(\chi,s)$ is the 
+    meromorphic continuation of the Dirichlet series 
+    $\sum_{n=0}^\infty \chi(n) n^{-s}, \Re(s) > 0$.
   
-- >
-  Its so-called trivial zeros lie on the negative $x$-axis, which are
-  therefore not listed.
+  comment-non-trivial-zeros: >
+    Its so-called trivial zeros lie on the negative $x$-axis, which are
+    therefore not listed.
 
-  All known non-trivial zeros lie on the line $\Re(s) = 1/2$.
-  If $\chi$ is real, their imaginary parts are symmetric about 0, 
-  in which case we only list the positive ones.
+    All known non-trivial zeros lie on the line $\Re(s) = 1/2$.
+    If $\chi$ is real, their imaginary parts are symmetric about 0, 
+    in which case we only list the positive ones.
 
 Formulas: 
 
 Programs: 
 
 References:
-  Pl11: 
+  Pla11: 
     bib: >
       David J. Platt, "Computing degree 1 L-functions rigorously", 
       PhD thesis, University of Bristol, 2011.
@@ -77,7 +77,7 @@ Data properties:
   complete: no
   relative precision: 1e-28
   sources:
-  - CITE{Pl11}
+  - CITE{Pla11}
   - CITE{LMFDB}
   
 Display properties:
@@ -110,5 +110,84 @@ Numbers:
     both signs: yes
     numbers: INPUT{numbers_5_4.yaml}
     url: https://www.lmfdb.org/Character/Dirichlet/5/4
-
-    
+  7,2:
+    both signs: no
+    numbers: INPUT{numbers_7_2.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/7/2
+  7,3:
+    both signs: no
+    numbers: INPUT{numbers_7_3.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/7/3
+  7,4:
+    both signs: no
+    numbers: INPUT{numbers_7_4.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/7/4
+  7,5:
+    both signs: no
+    numbers: INPUT{numbers_7_5.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/7/5
+  7,6:
+    both signs: yes
+    numbers: INPUT{numbers_7_6.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/7/6
+  8,3:
+    both signs: yes
+    numbers: INPUT{numbers_8_3.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/8/5
+  8,5:
+    both signs: yes
+    numbers: INPUT{numbers_8_5.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/8/5
+  9,2:
+    both signs: no
+    numbers: INPUT{numbers_9_2.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/9/2
+  9,4:
+    both signs: no
+    numbers: INPUT{numbers_9_4.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/9/4
+  9,5:
+    both signs: no
+    numbers: INPUT{numbers_9_5.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/9/5
+  9,7:
+    both signs: no
+    numbers: INPUT{numbers_9_7.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/9/7
+  11,2:
+    both signs: no
+    numbers: INPUT{numbers_11_2.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/11/2
+  11,3:
+    both signs: no
+    numbers: INPUT{numbers_11_3.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/11/3
+  11,4:
+    both signs: no
+    numbers: INPUT{numbers_11_4.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/11/4
+  11,5:
+    both signs: no
+    numbers: INPUT{numbers_11_5.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/11/5
+  11,6:
+    both signs: no
+    numbers: INPUT{numbers_11_6.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/11/6
+  11,7:
+    both signs: no
+    numbers: INPUT{numbers_11_7.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/11/7
+  11,8:
+    both signs: no
+    numbers: INPUT{numbers_11_8.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/11/8
+  11,9:
+    both signs: no
+    numbers: INPUT{numbers_11_9.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/11/9
+  11,10:
+    both signs: yes
+    numbers: INPUT{numbers_11_10.yaml}
+    url: https://www.lmfdb.org/Character/Dirichlet/11/10
+  
