added series of completed Riemann zeta function at 1/2

--- a/data/Special_values/Values_of_the_Riemann_zeta_function_at_rational_numbers/collection.yaml
+++ b/data/Special_values/Values_of_the_Riemann_zeta_function_at_rational_numbers/collection.yaml
@@ -4,7 +4,7 @@ Title: >
   Values of the Riemann zeta function at rational numbers
 
 Definition: >
-  The list values $\zeta(s)$ of the Riemann zeta function
+  The list contains values $\zeta(s)$ of the Riemann zeta function
   at rational numbers $s$.
 
 Parameters:
